@@ -394,3 +394,12 @@ mpn_mu_div_qr_itch (mp_size_t nn, mp_size_t dn, int mua_k)
 
   return in + itch_local + itch_out;
 }
+
+mp_size_t
+mpn_preinv_mu_div_qr_itch (mp_size_t nn, mp_size_t dn, mp_size_t in)
+{
+  mp_size_t itch_local = mpn_mulmod_bnm1_next_size (dn + 1);
+  mp_size_t itch_out = mpn_mulmod_bnm1_itch (itch_local, dn, in);
+
+  return in + itch_local + itch_out;
+}
